# video_exporter

./: .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
assets/templates/: index_script.js  script.js  style.css
video_exporter/: __init__.py  exporter.py  main.py  path.py  video.py
video_exporter/assets/templates/: index_script.js  script.js  video.html  video2.html
