[metadata]
name = video_exporter
version = 1.0.0
author = Quinten Roets
author_email = quinten.roets@gmail.com
url = https://github.com/quintenroets/video_exporter
license = MIT

[options]
packages = find:
include_package_data = True
package_dir =
    = .
install_requires =
    superpathlib

[options.entry_points]
console_scripts =
    export_videos = video_exporter.main:main
    
[options.package_data]
video_exporter = assets/**

[options.packages.find]
where = .

[bdist_wheel]
universal = true
